[package]
name = "ehxacto"
version = "0.1.0"
authors = ["Rashid Al-Abri <hello@rashidalabri.com>"]
edition = "2021"
description = "Find exact tandem repeat coordinates from approximate regions identified by ExpansionHunter denovo"
repository = "https://github.com/rashidalabri/ehxacto"
license = "MIT OR Apache-2.0"
keywords = ["bioinformatics", "genomics", "tandem-repeats"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bio = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
indicatif = {version = "0.17.8", features = ["rayon"]}
rayon = "1.10.0"
serde = "1.0.198"
serde_json = "1.0.116"
